--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>POS코드 기준 미수금 조회</h1>
+        <h1>POS코드별 미수금 조회</h1>
 
         <div>
             <input type="text" id="pos-code-input" placeholder="POS코드를 입력하세요">
