--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         /* 결과 헤더 및 금액 스타일 */
         .result-header { display: flex; justify-content: space-between; align-items: center; margin-top: 20px; }
         #result-message { font-weight: bold; }
-        #total-amount { font-weight: bold; font-size: 1.2em; color: #d93025; }
+        .total-amount-display { font-weight: bold; font-size: 1.2em; color: #d93025; text-align: right; margin-top: 1em; }
         
         /* 청구서 스타일 */
         #invoice-title { text-align: center; font-size: 1.8em; font-weight: bold; color: #2c3e50; margin-top: 1.5em; margin-bottom: 0.2em; }
@@ -79,6 +79,7 @@
                     <tbody></tbody>
                 </table>
             </div>
+            <div id="manager-total-amount" class="total-amount-display"></div>
         </div>
 
         <div id="pos-results-container">
@@ -92,7 +93,6 @@
                 </div>
                 <div class="result-header">
                     <div id="result-message"></div>
-                    <div id="total-amount"></div>
                 </div>
                 <div class="table-wrapper">
                     <table id="result-table">
@@ -107,6 +107,7 @@
                         <tbody></tbody>
                     </table>
                 </div>
+                 <div id="total-amount" class="total-amount-display"></div>
             </div>
         </div>
     </div>
@@ -180,8 +181,11 @@
             document.getElementById('manager-name-header').innerText = `${managerName} 담당 판매처 목록`;
             tableBody.innerHTML = '';
 
+            let grandTotal = 0; // 담당별 총 합계를 위한 변수
+
             for (const seller in aggregatedData) {
                 const data = aggregatedData[seller];
+                grandTotal += data.totalAmount; // 판매처별 합계를 총 합계에 더함
                 const row = tableBody.insertRow();
                 row.insertCell(0).innerText = seller;
                 row.insertCell(1).innerText = `${data.totalAmount.toLocaleString()}원`;
@@ -191,10 +195,15 @@
                 detailButton.innerText = '상세보기';
                 detailButton.onclick = () => {
                     document.getElementById('pos-code-input').value = data.posCode;
-                    searchByPosCode(); // POS 코드 조회 함수 자동 실행
+                    searchByPosCode();
                 };
                 detailCell.appendChild(detailButton);
             }
+            
+            // 담당별 총 합계 표시
+            const totalDiv = document.getElementById('manager-total-amount');
+            totalDiv.innerText = `담당 총 합계: ${grandTotal.toLocaleString()}원`;
+
             managerContainer.style.display = 'block';
             posContainer.style.display = 'none';
         }
@@ -223,7 +232,6 @@
             const noticeSellerName = document.getElementById('notice-seller-name');
             const captureBtn = document.getElementById('capture-btn');
 
-            // 초기화
             tableBody.innerHTML = "";
             resultMessage.innerText = "";
             totalAmountDiv.innerText = "";
