--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         #manager-results-container, #pos-results-container { display: none; } /* 결과 컨테이너 기본 숨김 */
 
         @media (max-width: 768px) {
+            #capture-btn {
+               display: none;
+            }
             body { padding: 0.5em; }
             .container { padding: 1em; }
             h1 { font-size: 1.5em; }
